Fixing z-index (#335)

--- a/resources/assets/scss/next-toolbox.scss
+++ b/resources/assets/scss/next-toolbox.scss
@@ -45,3 +45,4 @@ $secondary-font-family: $font-league-gothic;
 // Z-Indexes used
 $tabbed-navigation-zindex: 100;
 $sticky-cta-zindex: 200;
+$notification-zindex: 300;
